// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`User Profile Page renders authenticated state correctly 1`] = `
<div>
  <div
    style="padding: 2rem;"
  >
    <h1>
      Halaman Profile
    </h1>
    <div>
      <p>
        <strong>
          Nama:
        </strong>
         
        John
      </p>
      <p>
        <strong>
          Email:
        </strong>
         
        john@test.com
      </p>
      <p>
        <strong>
          Role:
        </strong>
         
        admin
      </p>
    </div>
  </div>
</div>
`;

exports[`User Profile Page renders loading state correctly 1`] = `
<div>
  <p>
    Loading...
  </p>
</div>
`;

exports[`User Profile Page renders unauthenticated state correctly 1`] = `
<div>
  <div
    style="padding: 2rem;"
  >
    <h1>
      Halaman Profile
    </h1>
    <p>
      Silakan login terlebih dahulu.
    </p>
  </div>
</div>
`;
